# iota-cockpit-simulator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  capabilities.yaml  run.sh
.github/workflows/: ci.yml  quality.yml
apps/cockpit-desktop/: AGENTS.md  IMPROVEMENTS.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/cockpit-desktop/src/: App.test.tsx  App.tsx  i18n.tsx  main.tsx  runnerClient.ts  simulatorClient.ts  styles.css  testSetup.ts  theme.tsx
apps/cockpit-desktop/src-tauri/: Cargo.toml  build.rs  prepare-sidecar.ps1  prepare-sidecar.sh  tauri.conf.json
apps/cockpit-desktop/src-tauri/capabilities/: default.json
apps/cockpit-desktop/src-tauri/src/: evaluation_commands.rs  lib.rs  main.rs  runner_commands.rs  simulator_commands.rs  simulator_commands_tests.rs
apps/cockpit-desktop/src/components/: ErrorBoundary.tsx  IndependentEvaluationPanel.test.tsx  IndependentEvaluationPanel.tsx  KeyboardShortcutsHelp.tsx  SimulationActivityFeed.tsx  SimulationEvaluation.tsx  SimulationNarrative.tsx  SimulationProgress.tsx  SimulationReplay.tsx  SimulationRunControl.tsx  SimulationSourcePanel.autoRun.test.tsx  SimulationSourcePanel.test.tsx  SimulationSourcePanel.tsx  SimulationTimeline.tsx  SimulationTrace.tsx  SimulationWorldView.test.tsx  SimulationWorldView.tsx
apps/cockpit-desktop/src/config/: cabinLayout.ts  constants.ts  scenarioCatalog.test.ts  scenarioCatalog.ts
apps/cockpit-desktop/src/hooks/: useRunner.ts  useSimulator.test.tsx  useSimulator.ts
apps/cockpit-desktop/src/state/: simulationReducer.test.ts  simulationReducer.ts
apps/cockpit-desktop/src/types/: simulation.ts
apps/cockpit-desktop/src/utils/: describeError.ts  export.test.ts  export.ts  reconnect.test.ts  reconnect.ts  redact.test.ts  redact.ts  storage.test.ts  storage.ts
calibration/: README.md  calibrate_vehicle_fire.py  validate_human_heat_stress.py  verify.py
calibration/profiles/: human-heat-stress-validation-v1.json
crates/cockpit-agent/: Cargo.toml
crates/cockpit-agent-runtime/: Cargo.toml
crates/cockpit-agent-runtime/src/: acp_adapter.rs  iota_core_adapter.rs  lib.rs  live.rs  multi_agent.rs  policy.rs  skill.rs
crates/cockpit-agent/src/: acp_adapter.rs  iota_core_adapter.rs  lib.rs  multi_agent.rs  native_mcp.rs  open_world.rs  policy.rs  skill.rs  translation.rs
crates/cockpit-agent/src/live/: decision.rs  driver.rs  mod.rs  tests.rs  types.rs
crates/cockpit-evaluation/: Cargo.toml
crates/cockpit-evaluation/src/: lib.rs  plane.rs
crates/cockpit-evaluator/src/: main.rs  suite.rs
crates/cockpit-judge/: Cargo.toml
crates/cockpit-judge/src/: lib.rs
crates/cockpit-plugin/: Cargo.toml
crates/cockpit-plugin/src/: lib.rs
crates/cockpit-recording/: Cargo.toml
crates/cockpit-recording/src/: diff.rs  lib.rs  migrate.rs  queue.rs  replay.rs  store.rs
crates/cockpit-runner/: Cargo.toml
crates/cockpit-runner/src/: benchmark.rs  lib.rs  live_run.rs  main.rs  memory.rs  server.rs
crates/cockpit-runner/src/ipc/: handler.rs  mod.rs  proto.rs
crates/cockpit-runner/tests/: process_restart_recovery.rs
crates/cockpit-scenario/: Cargo.toml
crates/cockpit-scenario/src/: lib.rs
crates/cockpit-simulation-core/src/: action.rs  event.rs  influence.rs  lib.rs  simulation.rs
crates/cockpit-simulator/: Cargo.toml  build.rs
crates/cockpit-simulator/src/: benchmark.rs  lib.rs  live_run.rs  main.rs  memory.rs  server.rs
crates/cockpit-simulator/src/ipc/: control.rs  handler.rs  lifecycle.rs  mod.rs  open_world.rs  proto.rs
crates/cockpit-simulator/tests/: process_restart_recovery.rs
crates/cockpit-world/: Cargo.toml
crates/cockpit-world/src/: action.rs  capability.rs  clock.rs  digital_twin.rs  effects.rs  error.rs  event.rs  generated_vehicle_fire.rs  id.rs  lib.rs  perception.rs  sensor.rs  simulation.rs  world.rs
doc/: 001.md
docs/: .architecture-layer-test.mmd  README-zh.md  architecture-zh.md  evaluation-zh.md  profiling-zh.md  simulation-mvp-acceptance.md  tauri-acceptance-checklist.md  user-guide-zh.md
skills/cockpit-simulation/: SKILL.md
skills/cockpit-world/: SKILL.md  SKILL.zh.md
tests/contract/: acp_adapter.rs  benchmark_actions.rs  benchmark_report.rs  digital_twin.rs  evaluation_policy.rs  influence_rules.rs  mcp_boundary.rs  multi_agent.rs  payload_store.rs  plugin_host.rs  recording_migration.rs  recording_persist_failure.rs  recording_redaction.rs  recording_store.rs  runner_ipc.rs  runner_server.rs  runtime_policy.rs  scenario_limits.rs  simulator_ipc.rs  simulator_restart.rs  simulator_server.rs
tests/determinism/: smoke_replay.rs
tests/integration/: live_agent_run.rs  rule_agent_smoke.rs
tools/: audit-dependencies.ps1  perf-acceptance.sh  profile-desktop.ps1  profile-desktop.sh
