[package]
name = "iota-cockpit-simulator"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[workspace]
members = [
  "crates/cockpit-simulation-core",
  "crates/cockpit-scenario",
  "crates/cockpit-recording",
  "crates/cockpit-evaluation",
  "crates/cockpit-agent-runtime",
  "crates/cockpit-runner",
  "crates/cockpit-plugin",
  "apps/cockpit-desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "io-util"] }
tokio-util = "0.7"
thiserror = "2"
cockpit-simulation-core = { path = "crates/cockpit-simulation-core" }
cockpit-scenario = { path = "crates/cockpit-scenario" }
cockpit-recording = { path = "crates/cockpit-recording" }
cockpit-evaluation = { path = "crates/cockpit-evaluation" }
cockpit-agent-runtime = { path = "crates/cockpit-agent-runtime" }
cockpit-runner = { path = "crates/cockpit-runner" }
cockpit-plugin = { path = "crates/cockpit-plugin" }
# iota-core is pinned to a git revision that exposes the cancellable turn API
# (`run_cancellable` + `TurnCancelled`). It is used only by cockpit-agent-runtime.
iota-core = { git = "https://github.com/feuyeux/iota-sympantos.git", rev = "d29de2e6a65f887c8f5e0e7f0bbb387fd91b6dad", package = "iota-core", default-features = false }

[features]
# Opt-in real iota-core ACP backend, forwarded to the runner and agent runtime.
# The default build keeps live-agent tests deterministic and offline.
default = []
live-acp = ["cockpit-runner/live-acp"]

[dependencies]
cockpit-simulation-core.workspace = true
cockpit-scenario.workspace = true
cockpit-recording.workspace = true
cockpit-evaluation.workspace = true
cockpit-agent-runtime.workspace = true
cockpit-runner.workspace = true
cockpit-plugin.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[[test]]
name = "smoke_replay"
path = "tests/determinism/smoke_replay.rs"

[[test]]
name = "mcp_boundary"
path = "tests/contract/mcp_boundary.rs"

[[test]]
name = "runner_ipc"
path = "tests/contract/runner_ipc.rs"

[[test]]
name = "recording_store"
path = "tests/contract/recording_store.rs"

[[test]]
name = "runtime_policy"
path = "tests/contract/runtime_policy.rs"

[[test]]
name = "acp_adapter"
path = "tests/contract/acp_adapter.rs"

[[test]]
name = "runner_server"
path = "tests/contract/runner_server.rs"

[[test]]
name = "plugin_host"
path = "tests/contract/plugin_host.rs"

[[test]]
name = "multi_agent"
path = "tests/contract/multi_agent.rs"

[[test]]
name = "payload_store"
path = "tests/contract/payload_store.rs"

[[test]]
name = "recording_redaction"
path = "tests/contract/recording_redaction.rs"

[[test]]
name = "scenario_limits"
path = "tests/contract/scenario_limits.rs"

[[test]]
name = "recording_diff"
path = "tests/contract/recording_diff.rs"

[[test]]
name = "recording_migration"
path = "tests/contract/recording_migration.rs"

[[test]]
name = "influence_rules"
path = "tests/contract/influence_rules.rs"

[[test]]
name = "runner_restart"
path = "tests/contract/runner_restart.rs"

[[test]]
name = "benchmark_report"
path = "tests/contract/benchmark_report.rs"

[[test]]
name = "rule_agent_smoke"
path = "tests/integration/rule_agent_smoke.rs"

[[test]]
name = "live_agent_run"
path = "tests/integration/live_agent_run.rs"
