[package]
name = "iota-cockpit"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[workspace]
members = [
  "crates/cockpit-world",
  "crates/cockpit-scenario",
  "crates/cockpit-recording",
  "crates/cockpit-evaluation",
  "crates/cockpit-evaluator",
  "crates/cockpit-judge",
  "crates/cockpit-agent",
  "crates/cockpit-simulator",
  "crates/cockpit-plugin",
  "apps/cockpit-desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1.0.103"
bincode = "1.3"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
uuid = { version = "1.23.4", features = ["v4"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "net", "io-util"] }
tokio-util = "0.7.18"
thiserror = "2.0.18"
libc = "0.2.186"
cockpit-world = { path = "crates/cockpit-world" }
cockpit-scenario = { path = "crates/cockpit-scenario" }
cockpit-recording = { path = "crates/cockpit-recording" }
cockpit-evaluation = { path = "crates/cockpit-evaluation" }
cockpit-agent = { path = "crates/cockpit-agent" }
cockpit-simulator = { path = "crates/cockpit-simulator" }
cockpit-plugin = { path = "crates/cockpit-plugin" }
# Use the published package while retaining the `iota-core` dependency alias
# and `iota_core` Rust library import for source compatibility.
iota-core = { package = "iota-sympantos-core", version = "0.1.0", default-features = false }

[features]
# Opt-in real iota-core ACP backend, forwarded to the simulator and agent runtime.
# The default build keeps live-agent tests deterministic and offline.
default = []
live-acp = ["cockpit-simulator/live-acp"]

[dependencies]
cockpit-world.workspace = true
cockpit-scenario.workspace = true
cockpit-recording.workspace = true
cockpit-evaluation.workspace = true
cockpit-agent.workspace = true
cockpit-simulator.workspace = true
cockpit-plugin.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[[test]]
name = "smoke_replay"
path = "tests/determinism/smoke_replay.rs"

[[test]]
name = "mcp_boundary"
path = "tests/contract/mcp_boundary.rs"

[[test]]
name = "simulator_ipc"
path = "tests/contract/simulator_ipc.rs"

[[test]]
name = "recording_store"
path = "tests/contract/recording_store.rs"

[[test]]
name = "runtime_policy"
path = "tests/contract/runtime_policy.rs"

[[test]]
name = "acp_adapter"
path = "tests/contract/acp_adapter.rs"

[[test]]
name = "simulator_server"
path = "tests/contract/simulator_server.rs"

[[test]]
name = "plugin_host"
path = "tests/contract/plugin_host.rs"

[[test]]
name = "multi_agent"
path = "tests/contract/multi_agent.rs"

[[test]]
name = "payload_store"
path = "tests/contract/payload_store.rs"

[[test]]
name = "recording_redaction"
path = "tests/contract/recording_redaction.rs"

[[test]]
name = "scenario_limits"
path = "tests/contract/scenario_limits.rs"

[[test]]
name = "recording_diff"
path = "tests/contract/recording_diff.rs"

[[test]]
name = "influence_rules"
path = "tests/contract/influence_rules.rs"

[[test]]
name = "simulator_restart"
path = "tests/contract/simulator_restart.rs"


[[test]]
name = "digital_twin"
path = "tests/contract/digital_twin.rs"
[[test]]
name = "recording_persist_failure"
path = "tests/contract/recording_persist_failure.rs"

[[test]]
name = "benchmark_report"
path = "tests/contract/benchmark_report.rs"

[[test]]
name = "benchmark_scenario_evaluation"
path = "tests/contract/benchmark_scenario_evaluation.rs"

[[test]]
name = "benchmark_actions"
path = "tests/contract/benchmark_actions.rs"

[[test]]
name = "evaluation_policy"
path = "tests/contract/evaluation_policy.rs"

[[test]]
name = "rule_agent_smoke"
path = "tests/integration/rule_agent_smoke.rs"

[[test]]
name = "live_agent_run"
path = "tests/integration/live_agent_run.rs"
