[package]
name = "cockpit-agent-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
# Opt-in wiring of the real iota-core ACP backend. The default build keeps the
# live driver backend-agnostic so `cargo test --workspace` stays deterministic
# and offline.
default = []
live-acp = []

[dependencies]
cockpit-simulation-core.workspace = true
iota-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
cockpit-scenario.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
