[package]
name = "cockpit-evaluation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cockpit-recording.workspace = true
cockpit-world.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
cockpit-scenario.workspace = true
