[package]
name = "cockpit-judge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
cockpit-evaluation.workspace = true
iota-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[[bin]]
name = "cockpit-judge-hermes"
path = "src/bin/hermes.rs"

[[bin]]
name = "cockpit-judge-opencode"
path = "src/bin/opencode.rs"
