[package]
name = "cockpit-recording"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cockpit-agent.workspace = true
cockpit-world.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
