[package]
name = "cockpit-simulator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
# Forward the opt-in real iota-core ACP backend to the agent runtime. Without
# it, `run-live` exercises the full policy/recording path with a synthetic
# backend so the default build stays deterministic and offline.
default = []
live-acp = ["cockpit-agent/live-acp"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
cockpit-agent.workspace = true
cockpit-plugin.workspace = true
cockpit-recording.workspace = true
cockpit-scenario.workspace = true
cockpit-world.workspace = true
iota-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
libc.workspace = true
