[package]
name = "cockpit-desktop"
version = "0.1.0"
description = "Cockpit simulation desktop host"
authors = ["Iota Cockpit"]
edition = "2024"
rust-version = "1.95.0"
publish = false

[lib]
name = "cockpit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
cockpit-simulator = { workspace = true, features = ["live-acp"] }
cockpit-recording.workspace = true
cockpit-evaluation.workspace = true
iota-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
